name:                streaming-attoparsec
version:             0.1.0.0
synopsis:            How do you apply attoparsec parsers to effectful bytestrings?
description:         This just defines two functions for applying attoparsec
                     parsers to byte streams in the sense of 'streaming-bytestring',
                     @ByteString m r@.  It transmutes some of the material from Renzo
                     Carbonara's @pipes-attoparsec@

license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Attoparsec.ByteString.Streaming
  -- other-modules:       
  other-extensions:    CPP, Trustworthy
  build-depends:       base >=4.8 && <4.9, 
                       bytestring >=0.10 && <0.11, 
                       transformers >=0.4 && <0.5, 
                       mtl >=2.2 && <2.3,
                       attoparsec,
                       streaming,
                       streaming-bytestring
                      
  -- hs-source-dirs:      
  default-language:    Haskell2010