name:                streaming-attoparsec
version:             0.1.0.0
synopsis:            Apply attoparsec parsers to bytestreams in the sense of 'streaming-bytestring'
description:         Materials for applying attoparsec parsers to byte streams in the sense of the 
                     <http://hackage.haskell.org/package/streaming-bytestring streaming bytestring> 
                     library.  

license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Streaming.Attoparsec
  -- other-modules:       
  other-extensions:    CPP, Trustworthy
  build-depends:       base >=4.7 && < 4.10, 
                       bytestring >=0.10 && <0.11, 
                       transformers >=0.4 && <0.6, 
                       mtl >=2.2 && <2.3,
                       attoparsec > 0.12 && < 0.14,
                       streaming >= 0.1.4.0 && < 0.1.4.8,
                       streaming-bytestring >= 0.1.4.0 && < 0.1.4.8
                      
  -- hs-source-dirs:      
  default-language:    Haskell2010